
Enum "enum_gender" {
  "male"
  "female"
  "unknown"
}

Enum "enum_employees_status" {
  "active"
  "resigned"
  "probation"
  "retired"
}

Enum "enum_room_status" {
  "available"
  "maintenance"
  "disabled"
  "reserved"
}

Enum "enum_rsvp_status" {
  "accepted"
  "declined"
  "tentative"
  "pending"
}

Table "departments" {
  "id" SERIAL [pk, increment]
  "name" VARCHAR(50) [unique, not null]
  "parent_department_id" INTEGER
}

Table "positions" {
  "id" SERIAL [pk, increment]
  "name" VARCHAR(50) [unique, not null]
}

Table "employees" {
  "id" SERIAL [pk, increment]
  "name" VARCHAR(50) [not null]
  "gender" enum_gender
  "department_id" INTEGER
  "position_id" INTEGER
  "phone" VARCHAR(20) [unique]
  "email" VARCHAR(50) [unique, not null]
  "hire_date" DATE [not null]
  "leave_date" DATE
  "status" enum_employees_status [not null, default: 'probation']
}

Table "regions" {
  "id" SERIAL [pk, increment]
  "code" VARCHAR(50) [unique]
  "name" VARCHAR(100) [not null]
  "parent_id" INTEGER
  "level" SMALLINT [not null]

  Indexes {
    parent_id [name: "idx_regions_parent_id"]
  }
  Note: 'A unified, hierarchical table for all administrative and geographical areas, worldwide.'
}

Table "office_areas" {
  "id" SERIAL [pk, increment]
  "name" VARCHAR(50) [not null]
  "region_id" INTEGER [not null]
  "street_address" VARCHAR(255) [not null]
  "geom" GEOGRAPHY(Point,4326) [not null]

  Indexes {
    region_id [name: "idx_office_areas_region_id"]
  }
}

Table "rooms" {
  "id" SERIAL [pk, increment]
  "office_area_id" INTEGER [not null]
  "room_number" VARCHAR(10) [unique, not null]
  "name" VARCHAR(50) [not null]
  "floor" smallint [not null]
  "capacity" smallint [not null]
  "status" enum_room_status [not null, default: 'available']
  "has_projector" BOOLEAN [not null, default: false]
  "has_whiteboard" BOOLEAN [not null, default: false]
  "has_video_conference" BOOLEAN [not null, default: false]
  "description" TEXT

  Indexes {
    office_area_id [name: "idx_rooms_office_area_id"]
  }
}

Table "meetings" {
  "id" SERIAL [pk, increment]
  "booking_number" "char (9)" [unique, not null]
  "title" VARCHAR(50) [not null]
  "room_id" INTEGER [not null]
  "organizer_id" INTEGER
  "start_time" TIMESTAMPTZ [not null]
  "end_time" TIMESTAMPTZ [not null]
  "is_canceled" BOOLEAN [not null, default: false]
  "description" TEXT

  Indexes {
    (room_id, start_time, end_time) [name: "idx_meetings_time"]
  }
}

Table "meeting_participants" {
  "meeting_id" INTEGER
  "employee_id" INTEGER
  "rsvp_status" enum_rsvp_status [not null, default: 'pending']

  Indexes {
    (meeting_id, employee_id) [pk]
    employee_id [name: "idx_meeting_participants_employee"]
  }
}

Ref:"departments"."id" < "departments"."parent_department_id"

Ref:"departments"."id" < "employees"."department_id"

Ref:"positions"."id" < "employees"."position_id"

Ref:"regions"."id" < "regions"."parent_id"

Ref:"regions"."id" < "office_areas"."region_id"

Ref:"office_areas"."id" < "rooms"."office_area_id"

Ref:"rooms"."id" < "meetings"."room_id"

Ref:"employees"."id" < "meetings"."organizer_id"

Ref:"meetings"."id" < "meeting_participants"."meeting_id" [delete: cascade]

Ref:"employees"."id" < "meeting_participants"."employee_id" [delete: cascade]
